tests/expectations/compiler/core/algorithms/pedersen_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `u128` was found.
    --> compiler-test:5:50
     |
   5 |         let a: group = Pedersen64::hash_to_field(1u128); // Pedersen64 hash_to_field returns a field type
     |                                                  ^^^^^
Error [ETYC0372117]: Expected type `group` but type `field` was found.
    --> compiler-test:5:24
     |
   5 |         let a: group = Pedersen64::hash_to_field(1u128); // Pedersen64 hash_to_field returns a field type
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {    
     | ^^^^^^^^^^^^
"""]
